--- a/src/main/webapp/WEB-INF/views/politicalPartyCandidatesPresidents.html
+++ b/src/main/webapp/WEB-INF/views/politicalPartyCandidatesPresidents.html
@@ -46,7 +46,7 @@ font-size: 20px;
 				<td th:text="${candidate.firstName}">Dawid</td>
 				<td th:text="${candidate.lastName}">Zak</td>
 				<td th:text="${candidate.partyMember}">Zak</td>
-				<td><span th:value="${candidate.ID}" th:attr="data-id=${candidate.ID}, data-firstName=${candidate.firstName}, data-lastName=${candidate.firstName}, data-partyMember=${candidate.partyMember}" class="glyphicon glyphicon-remove pointer size-margin open-AddBookDialog" data-toggle="modal" data-target="#myModal1" aria-hidden="true"></span><span th:value="${candidate.ID}" class="glyphicon glyphicon-pencil size-margin pointer" aria-hidden="true"></span> </td>
+				<td><span th:value="${candidate.ID}" th:attr="data-id=${candidate.ID}, data-firstName=${candidate.firstName}, data-lastName=${candidate.firstName}, data-partyMember=${candidate.partyMember}" class="glyphicon glyphicon-remove pointer size-margin open-AddBookDialog" data-toggle="modal" data-target="#myModal1" aria-hidden="true"></span><span  th:value="${candidate.ID}" th:attr="data-id=${candidate.ID}, data-firstName=${candidate.firstName}, data-lastName=${candidate.lastName}, data-partyMember=${candidate.partyMember}"  class="glyphicon glyphicon-pencil size-margin pointer edit" data-toggle="modal" data-target="#myModal2"  aria-hidden="true"></span> </td>
 			</tr>	
 				
 				
@@ -152,6 +152,51 @@ font-size: 20px;
 				</div>
 			</div>
 		</div>
+				<div th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
+			class="modal fade" id="myModal2" tabindex="-1" role="dialog"
+			aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Edytuj Dane Kandydata Na Przewodniczącego  Partii</h4>
+					</div>
+					<div class="modal-body">
+							<form method="post" role="form" 
+							th:action="politicalPartyCandidatesPresidentEdit" th:object="${politicalPartyCandidatePartyEdit}">
+							<div class="form-group">
+							<label for="ID">ID</label>
+							<input id="ID" type="text" class="form-control" value="" readonly="readonly" name="ID" placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+							<label for="firstName">Imie</label>
+							<input id="firstName" type="text" class="form-control"  th:field="${politicalPartyCandidatePartyDelete.firstName}" name="firstName" placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+							<label for="lastName">Nazwisko</label>
+							<input id="lastName" type="text" class="form-control" value=""   name="lastName" placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+							<label for="party">Partia</label>
+							<input id="party" type="text" class="form-control" value=""  name="party" placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Zamknij</button>
+								<button type="submit" class="btn btn-primary red-button">Edytuj</button>
+
+							</div>
+
+
+						</form>
+					</div>
+
+				</div>
+			</div>
+		</div>
 		
 		<div th:replace="templates/templates::footer"></div>
 	</div>
@@ -163,7 +208,14 @@ font-size: 20px;
 	    $('input#firstName.form-control').val($(this).data('firstname'));
 	    $('input#lastName.form-control').val($(this).data('lastname'));
 	    $('input#party.form-control').val($(this).data('partymember'));
-});
+	});
+	
+	$(document).on("click", ".edit", function () {
+	    $('input#ID.form-control').val($(this).data('id'))
+	    $('input#firstName.form-control').val($(this).data('firstname'));
+	    $('input#lastName.form-control').val($(this).data('lastname'));
+	    $('input#party.form-control').val($(this).data('partymember'));
+	});
 
 	</script>
 </body>
