--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -147,6 +147,10 @@ display:inline-flex;
 			</div>
 			<!--/.container-fluid -->
 		</nav>
+								<input type="hidden" th:name="${_csrf.parameterName}"
+						id="header" th:value="${_csrf.headerName}" /> <input
+						type="hidden" th:name="${_csrf.parameterName}" id="token"
+						th:value="${_csrf.token}" />
 		<span
 			th:text="${#authorization.expression('isAuthenticated()')} ? 
                'the user is logged in' : 
@@ -192,9 +196,9 @@ display:inline-flex;
 									aria-controls="home" role="tab" data-toggle="tab">Dane
 										Podstawowe</a></li>
 								<li role="presentation"><a href="#profile"
-									aria-controls="profile" role="tab" data-toggle="tab">Konto</a></li>
+									aria-controls="profile" role="tab" data-toggle="tab">Edytuj</a></li>
 								<li role="presentation"><a href="#messages"
-									aria-controls="messages" role="tab" data-toggle="tab">Opis</a></li>
+									aria-controls="messages" role="tab" data-toggle="tab">???</a></li>
 								<li role="presentation"><a href="#settings"
 									aria-controls="settings" role="tab" data-toggle="tab">Informacje</a></li>
 							</ul>
@@ -239,19 +243,20 @@ display:inline-flex;
 												<tr>
 													<td><h5>E-mail:</h5>
 														<p class="email"></p> <a class="change">Zmień adres</a>
-																	<form>
+																	<form th:action="editUserInfo" method="POST" th:object="${settingsForm}" id="newEmail">
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
+    <input th:field="${settingsForm.email}" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
   </div>
     <div class="form-group">
     <label for="exampleInputEmail1">Potwierdź zmianę hasłem:</label>
     <input type="password" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
   </div>
+  <button class="btn btn-default" type="button" id = "sendNewEmail">Zmień</button>	
   </form>
 														</td>
 
-												</tr>
+																		</tr>
 <tr>
 <td><h5>Hasło:</h5>
 <form>
@@ -263,6 +268,38 @@ display:inline-flex;
     <label for="exampleInputEmail1">Potwierdź zmianę hasłem:</label>
     <input type="password" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
   </div>
+  <button></button>
+  </form>
+</td>
+</tr>
+<tr>
+<td>
+<form th:action="editUserInfo" method="POST" th:object="${settingsForm}" >
+  <div class="form-group">
+    <label for="exampleInputEmail1">Stare miejsce zamieszkania:</label>
+    <p class="city"></p>
+  </div>
+    <div class="form-group">
+    <label for="exampleInputEmail1">Nowe miejsce zamieszkania:</label>
+    <input th:field="${settingsForm.city}"   type="text" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
+  </div>
+  <button></button>
+  </form>
+</td>
+</tr>
+<tr>
+<td>
+
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Opis</label>
+    <p class="city"></p>
+  </div>
+    <div class="form-group">
+    <label for="exampleInputEmail1">Opis:</label>
+    <input type="password" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
+  </div>
+  <button></button>
   </form>
 </td>
 </tr>
@@ -293,6 +330,7 @@ display:inline-flex;
 					Developers</a></li>
 		</ul>
 	</div>
+	
 
 	<script th:fragment="script"
 		th:src="@{/resources/jquery/jquery-1.11.3.min.js}"></script>
@@ -322,6 +360,37 @@ display:inline-flex;
 					$('.PESEL').text(data.pesel);
 					$('.city').text(data.city);
 					$('.email').text(data.email);
+					
+				},
+				error : function(data) {
+					alert("errror")
+					console.dir(data)
+
+				}
+			})
+		});
+		
+		//sa
+				$('#sendNewEmail').on('click', function() {
+					console.log(this)
+			//alert("Dsadsadsad");
+			var token = $("#token").attr("value");
+			var header = $("#header").attr("value");
+			console.log(token);
+			console.log(header);
+			var val = $('#newEmail').serialize();
+			$.ajax({
+				type : "POST",
+				url : "editUserInfo",
+				beforeSend : function(xhr) {
+					xhr.setRequestHeader(header, token);
+					
+				},
+				data : val, // parameters
+				success : function(data) {
+
+					console.dir(data);
+
 					
 				},
 				error : function() {
