--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -250,7 +250,7 @@ display:inline-flex;
   </div>
     <div class="form-group">
     <label for="exampleInputEmail1">Potwierdź zmianę hasłem:</label>
-    <input type="password" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
+    <input th:field="${settingsForm.oldPassword}"  type="password" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
   </div>
   <button class="btn btn-default" type="button" id = "sendNewEmail">Zmień</button>	
   </form>
@@ -259,16 +259,16 @@ display:inline-flex;
 																		</tr>
 <tr>
 <td><h5>Hasło:</h5>
-<form>
+<form id="newPasswordForm" method="POST" th:object="${settingsForm}">
   <div class="form-group">
     <label for="exampleInputEmail1">Nowe hasło:</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
+    <input th:field="${settingsForm.newPassword}"  type="password" class="form-control" id="exampleInputEmail1" placeholder="Nowe hasło"/>
   </div>
     <div class="form-group">
     <label for="exampleInputEmail1">Potwierdź zmianę hasłem:</label>
-    <input type="password" class="form-control" id="exampleInputEmail1" placeholder="Email"/>
+    <input th:field="${settingsForm.oldPassword}"  type="password" class="form-control" id="exampleInputEmail1" placeholder="Aktualne hasło"/>
   </div>
-  <button></button>
+  <button class="btn btn-default"  type="button" id="newPasswordSend"></button>
   </form>
 </td>
 </tr>
@@ -408,6 +408,36 @@ display:inline-flex;
 			$.ajax({
 				type : "POST",
 				url : "editUserInfoCity",
+				beforeSend : function(xhr) {
+					xhr.setRequestHeader(header, token);
+					
+				},
+				data : val, // parameters
+				success : function(data) {
+					getInfo();
+					console.dir(data);
+
+					
+				},
+				error : function() {
+					alert("errror")
+
+				}
+			})
+		});
+		
+		//password
+		$('#newPasswordSend').on('click', function() {
+					console.log(this)
+			//alert("Dsadsadsad");
+			var token = $("#token").attr("value");
+			var header = $("#header").attr("value");
+			console.log(token);
+			console.log(header);
+			var val = $('#newPasswordForm').serialize();
+			$.ajax({
+				type : "POST",
+				url : "editUserInfoPassword",
 				beforeSend : function(xhr) {
 					xhr.setRequestHeader(header, token);
 					
