--- a/src/main/webapp/WEB-INF/views/politicalParty.html
+++ b/src/main/webapp/WEB-INF/views/politicalParty.html
@@ -38,7 +38,8 @@ body {
 			<tbody th:each="party : ${politicParty}">
 				<td th:text="${party.partyName}">Dawid</td>
 				<td th:text="${party.kind}">Zak</td>
-				<td th:text="${party.userPartyPresident.firstName} +' ' + ${party.userPartyPresident.lastName} ">Zak</td>
+				<td
+					th:text="${party.userPartyPresident.firstName} +' ' + ${party.userPartyPresident.lastName} ">Zak</td>
 				<td th:text="${party.countMembers}">Zak</td>
 			</tbody>
 		</table>
@@ -58,25 +59,32 @@ body {
 							Polityczną</h4>
 					</div>
 					<div class="modal-body">
-						<form method="post" role="form" th:object="${partyForm}"
-							th:action="politicalPartySend">
+						<form method="post" role="form" th:action="politicalPartySend">
 
 							<div class="form-group">
 								<label for="partyName">Nazwa</label> <input
 									th:field="${partyForm.partyName}" type="text"
 									class="form-control" name="partyName"
-									placeholder="Podaj nazwę partii" />
+									placeholder="Podaj nazwę partii"
+									th:value="${partyForm.partyName}" />
 							</div>
 							<div class="form-group">
 								<label for="partyPresident">Przewodniczący partii</label> <input
-									th:field="${partyForm.partyPresident}" type="text"
-									class="form-control" name="firstName"
+									th:field="${partyForm.partyPresidentFirstName}" type="text"
+									class="form-control" name="partyPresidentFirstName"
 									placeholder="Podaj imie i nazwisko przewodniczącego" />
+								<div class="form-group">
+									<label for="wing">Orientacja(?)</label> <input
+										th:field="${partyForm.partyPresidentLastName}" type="text"
+										class="form-control" name="partyPresidentLastName"
+										placeholder="nazwisko" />
+								</div>
 								<div class="form-group">
 									<label for="wing">Orientacja(?)</label> <input
 										th:field="${partyForm.wing}" type="text" class="form-control"
 										name="wing" placeholder="Podaj orientacje(?)" />
 								</div>
+
 								<div class="form-group">
 									<label for="wing">Ilość członków</label> <input
 										th:field="${partyForm.countMembers}" type="number"
