--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -51,12 +51,13 @@ body {
 						<p class="PESELError" style="display: none;">Podaj swoj PESEL</p>
 					</div>
 					<div class="form-group">
-						<label for="email">Email address</label> <input type="text"
+						<label for="email">Email address</label> <input type="email"
 							class="form-control emailErrorInput"
-							th:field="${registerUser.email}" id="email"
+							th:field="${registerUser.email}" id="email" name = "email"
 							placeholder="Podaj swój email" />
-						
+
 						<p class="emailError" style="display: none;">Podaj swoj email</p>
+						
 					</div>
 					<div class="form-group">
 						<label for="password">Password</label> <input type="password"
@@ -85,7 +86,7 @@ body {
 						<label for="exampleInputPassword1">Miasto</label> <input
 							type="text" class="form-control cityErrorInput"
 							id="exampleInputPassword1" th:field="${registerUser.city}"
-							placeholder="Password" />
+							placeholder="Miasto" />
 						<p class="cityError" style="display: none;">Podaj miasto</p>
 
 					</div>
@@ -106,6 +107,8 @@ body {
 	<p class='firstNameError' style='display: none;'>kurwa</p>
 	<script>
 		$("button").on("click", function(event) {
+			console.log($('form[action="addSubmit"]').serialize());
+			
 			var token = $("#csrfToken").attr("value");
 			var header = $("#csrfHeader").attr("value");
 			var spinner = $('.displayNone')
@@ -117,7 +120,7 @@ body {
 					xhr.setRequestHeader(header, token);
 					spinner.css('display', 'block');
 				},
-				data : $('form').serialize(),
+				data : $('form[action="addSubmit"]').serialize(),
 				success : function(data) {
 					$.each(data, function(key, value) {
 						alert(key + ": " + value);
